# qrDrop

./: __init__.py  pyproject.toml
qrdrop/: __main__.py
