[tool.poetry]
name = "qrdrop"
version = "0.1.0"
description = "CLI tool to transfer files between computer and mobile device over network."
authors = ["Mark Solomonik"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
